src/global.css
:focus-visible {
  outline: none;
}

:root {
  --article: #313237;
  --background: #f1f1f1;
  --background-box: #fffffff0;
  --background-header: #f5f4f4b8;
  --background-label: rgb(236, 236, 236);
  --background-info: #f1f1f1;
  --background-input: #eff1f3;
  --background-popup: #0000009f;
  --background-popup-box: #eaeaea;
  --border: #d7d7d7;
  --border-default: 1px solid var(--border);
  --button: #5297f1;
  --button-text: white;
  --button-border: #2ea15e;
  --button-hover: #69b65c;
  --button-disabled: #b8b8b8;
  --grid: #f8f9fb;
  --height-header: 50px;
  --link: #5297f1;
  --link-selected: #d0dcff;
  --text: #5f6368;
  --text-disabled: #999ea4;
  --text-red: #ff4545;
  --text-important: #101010;
  --box-shadow-default: rgba(0, 0, 0, 0.1) 0px 4px 12px;
  --formatter-selected: #aae9ba;
  --placeholder: #6c6c6e;
  --input-min-height: 47.2px;
  --input-padding: 10.6px;
  --destructive: #f65151;
  --box-radius: 5px;
  --sidebar-button: #ffffff;
  --sidebar-width: 300px;
}

.dark {
  --background: #282828;
  --background-box: #1c1c1c;
  --background-header: #1b1c1be8;
  --background-info: #1f1f1f;
  --background-input: #171717;
  --background-input-header: #2e2f2e;
  --background-popup-box: var(--background-box);
  --border: #101010b0;
  --border-default: 1px solid var(--border);
  --destructive: #a33030;
  --grid: #242424;
  --text: #bcbcbc;
  --text-important: #e3ebe3;
  --button: #2d4f24;
  --button-disabled: #434343;
  --box-shadow-default: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  --sidebar-button: #365336;
}

a {
  color: var(--link);
  font-weight: 300;
}

a:visited {
  color: var(--link);
}

html {
  height: 100vh;
}

body {
  margin: 0;
  background-color: var(--background);
}

body, #root {
  width: 100%;
  height: 100%;
  overflow-y: hidden;
}

button {
  background-color: var(--button);
  border: none;
  padding: 8px 20px;
  border-radius: 5px;
  font-size: 16px;
  color: var(--button-text);
  transition: 0.05s;
  font-weight: 300;
}

button[disabled] span {
  color: var(--text-disabled);
}

button:hover {
  filter: brightness(0.9);
}

button:hover:active {
  filter: brightness(0.8)
}

button.destructive {
  background-color: var(--destructive);
}

html, body, button, input, textarea {
  font-family: "Lexend Deca";
}

input {
  width: 100%;
  border-radius: 5px;
  border: 1px solid var(--border);
  padding: var(--input-padding);
  box-sizing: border-box;
  background-color: var(--background-input);
  font-weight: 100;
  font-size: 16px;
}

input[type="file"] {
  display: none;
}

p, li {
  font-weight: 100;
  color: var(--text);
  line-height: 1.5rem;
  margin: 0;
}

h1 {
  color: var(--text-important);
  font-weight: 400;
  margin: 0;
  font-size: 22px;
}

